<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/action_popular"
            android:title="@string/popular"
            android:orderInCategory="1" />

        <item android:id="@+id/action_top_rated"
            android:title="@string/top_rated"
            android:orderInCategory="2" />

        <item android:id="@+id/action_upcoming"
            android:title="@string/upcoming"
            android:orderInCategory="3" />

        <item android:id="@+id/action_now_playing"
            android:title="@string/now_playing"
            android:orderInCategory="4" />

        <item android:id="@+id/action_favourites"
            android:title="@string/favourites"
            android:orderInCategory="5"/>
    </group>
</menu>