<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".MovieDetailActivity">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/l1_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:fontFamily="sans-serif-condensed"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:background="@color/background"
                        android:textColor="@android:color/white"
                        tools:text="The Legend of Bagger Vance" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:fontFamily="sans-serif-condensed"
                        android:background="@color/colorPrimary"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:text="2018-09-18" />

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:fontFamily="sans-serif-condensed"
                        android:background="@color/colorPrimary"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:text="120 minutes" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="41dp"
                            android:layout_height="41dp"
                            android:paddingLeft="4dp"
                            android:src="@drawable/ic_rating_stars_24dp" />

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="82dp"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif-condensed"
                            android:background="@color/colorPrimary"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            tools:text="7/10" />

                    </LinearLayout>

                    <ToggleButton
                        android:id="@+id/favourite_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:button="@android:drawable/btn_star"
                        android:onClick="toggleFavourite"
                        android:textOff=""
                        android:textOn="" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitXY" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="18dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp"
                tools:text="@string/overview" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/tv_trailer_label"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="18dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="18dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/tv_reviews_label"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginBottom="18dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="18dp" />

        </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_error_message"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/network_error_message"
                android:textColor="@color/colorTextSecondary"
                android:textSize="20sp"
                android:visibility="invisible" />
            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerInParent="true"
                android:visibility="invisible"/>

    </RelativeLayout>>
    </ScrollView>
